Modify footer styles to use flex column layout with gap and comment out fixed height

--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -2,7 +2,7 @@
    Footer
 ========================= */
 footer {
-  height: 60px;
+  /* height: 60px; */
   z-index: 50;
   width: 100%;
   /* background: var(--color-background-footer); */
@@ -14,6 +14,8 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  gap: 4px;
   height: 100%;
   width: 100%;
   padding: 16px;
